wdqs: activate GC logs
Bug: T159248
Change-Id: I6033325c8776c11d7c22316b685b1eca53829013